minor alignment issue fix

--- a/style.css
+++ b/style.css
@@ -270,8 +270,6 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   min-width: 300px;
-  margin: auto;
-  margin-bottom: 15px;
   flex: 0 0 45%;
 }
 .social-profiles {
@@ -333,8 +331,8 @@ body {
   color: #444444;
   text-align: center;
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 20px 0 30px 0;
-  margin-top: 10px;
+  padding: 40px 0 40px 0;
+  margin-bottom: 10px;
 }
 
 .email-icon {
